# LCTL

./: CMakeLists.txt  Collections.h  Definitions.h  LCTL_Guide  Makefile  README.md  Utils.h  VarintGB  main.cpp
algorithms/: BP5Bits.h
analyze/: Analyzer.h  Concepts.h  FindParameterAnalyzer.h  ParameterAnalyzer.h  RecursionAnalyzer.h  Term.h  functions.h
codegeneration/: Increment.h  LeftShift.h  RightShift.h  Write.h
collate/: Algorithm.h  Combiner.h  Concepts.h  Encoder.h  ParameterCalculator.h  Recursion.h  Tokenizer.h
columnformats/: VarintGB.h  columnformats.h  lab.h  variantGB.h
columnformats/delta/: delta.h
columnformats/forbp/: bpfranka.h  dynbp.h  dynforbp.h  statbp.h  statfordynbp.h  statforstatbp.h
compare/: dynbp_8_8.h  generatestaticbp.py  generatetestcase.py  outputfile.h  outputfile24.h
conversion/columnformat/: Cascade.h  Compress.h  CompressBlock.h  Decompose.h  Decompress.h  DecompressBlock.h
debugging/: indent_incoplete_type.py
doc/: guide.md
doc/abstract/: LCTL_abstract.md
examples/: build.sh  lucasmorphfor2bp2.cpp  test_cascades.cpp  test_correctness  test_correctness.cpp  test_morphing.cpp
formats/: VByte.h  formats.h
generate/: EncoderGenerator.h  Generator.h  Increment.h  LeftShift.h  LoopRecursionGenerator.h  ParameterGenerator.h  RightShift.h  StaticRecursionOuterConcatCombiner_TokenGenerator.h  StaticRecursionWOEncodedParametersGenerator.h  Write.h  functions.h
lib/: aggregation.h  arithmetics.h  collections.h  combiner.h  definition.h  literals.h
tests/: TestDefinitions.h  lab.cpp  varintGB  varintGB.cpp
(+48 files in other folders)
